RESOLVED FIXED220444
paypal.com: text at the bottom of the page is not aligned properly
https://bugs.webkit.org/show_bug.cgi?id=220444
Summary paypal.com: text at the bottom of the page is not aligned properly
alan
Reported 2021-01-07 16:37:07 PST
1. log in to paypal.com 2. "PayPal, Inc. All rights reserved" text at the bottom in not aligned properly
Attachments
Patch (6.51 KB, patch)
2021-01-07 16:59 PST, alan
no flags
alan
Comment 1 2021-01-07 16:37:20 PST
alan
Comment 2 2021-01-07 16:59:49 PST
EWS
Comment 3 2021-01-07 20:38:10 PST
Committed r271284: <https://trac.webkit.org/changeset/271284> All reviewed patches have been landed. Closing bug and clearing flags on attachment 417224 [details].
Note You need to log in before you can comment on or make changes to this bug.