paypal.com: text at the bottom of the page is not aligned properly https://bugs.webkit.org/show_bug.cgi?id=220444 <rdar://problem/60356338>

Reviewed by Simon Fraser.

Source/WebCore:

This patch addresses the case when we try to align text content inside an inline level box with display type of inline-block.

While ideally only the inline level boxes would participate in the vertical alignment process, in legacy line layout we align the text content as well.
The verticalAlignApplies() function filters out the cases when the text content should default to baseline. It was checking against "inline" to
ensure
"<div style="vertical-align: top">foobar</div>" works and it missed the following case "<div style="display: inline-block; vertical-align:top">foobar</div>" <- inline level box but "foobar" should be baseline aligned.

Tests: fast/inline/incorrect-vertical-alignment-inside-inline-block.html

* rendering/InlineFlowBox.cpp:
(WebCore::verticalAlignApplies):

LayoutTests:

* fast/css/vertical-align-block-elements-expected.html:
* fast/css/vertical-align-block-elements.html:
* fast/inline/incorrect-vertical-alignment-inside-inline-block-expected.html: Added.
* fast/inline/incorrect-vertical-alignment-inside-inline-block.html: Added.


Canonical link: https://commits.webkit.org/232863@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271284 268f45cc-cd09-0410-ab3c-d52691b4dbfc